<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CriaAtividadeActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prioridade" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="41dp"
        android:text="@string/descricao" />

    <EditText
        android:id="@+id/inputNovoPrioridade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="0"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/inputNovoDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="Qual é a atividade?"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputNovoDescricao"
        android:layout_below="@+id/inputNovoDescricao"
        android:layout_marginTop="20dp"
        android:text="@string/dataEntrega" />

    <EditText
        android:id="@+id/inputNovaDataEntrega"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="dd/mm/yyyy"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputNovaDataEntrega"
        android:layout_centerVertical="true"
        android:text="@string/dataRealizacao" />

    <EditText
        android:id="@+id/inputNovaDataRealizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="dd/mm/yyyy"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/inputNovaDataRealizacao"
        android:layout_marginTop="18dp"
        android:text="@string/disciplina" />

    <EditText
        android:id="@+id/inputNovaDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:hint="De qual disciplina?" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputNovaDataRealizacao"
        android:layout_below="@+id/inputNovaDisciplina"
        android:text="@string/nota" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="cadastrarAtividades"
        android:text="OK" />

    <EditText
        android:id="@+id/inputNovaNota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputNovaDisciplina"
        android:layout_alignTop="@+id/button1"
        android:ems="10"
        android:hint="Qual a nota recebida?"
        android:inputType="number" />

</RelativeLayout>